A few lines setting the scene.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -15,6 +15,12 @@ title = {{Stochastic Calculus, Filtering, and Stochastic Control (Lecture Notes)
 year = {2007}
 }
 
+@article{Doucet2012,
+author = {Doucet, A.},
+title = {{Sequential Monte Carlo Methods for Bayesian Computation}},
+year = {2012}
+}
+
 @book{protter2004stochastic,
   title={Stochastic Integration and Differential Equations: Version 2.1},
   author={Protter, P.E.},
