Draw chart for inferred position of car.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -62,3 +62,12 @@ year = {2004}
   year={2001},
   publisher={Springer New York}
 }
+
+@book{Srkk:2013:BFS:2534502,
+ author = {Särkkä, Simo},
+ title = {Bayesian Filtering and Smoothing},
+ year = {2013},
+ isbn = {1107619289, 9781107619289},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
