Initial model for inferring sir parameters.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -70,4 +70,47 @@ year = {2004}
  isbn = {1107619289, 9781107619289},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
-} 
+}
+
+@article{RTS-1965,
+    abstract = {{This paper considers the problem of estimating the states of linear dynamic systems in the presence of additive Gaussian noise. Difference equations relating the estimates for the problems of filtering and smoothing are derived as well as a similar set of equations relating the covariance of the errors. The derivation is based on the method of maximum likelihood and depends primarily on the simple manipulation of the probability density functions. The solutions are in a form easily mechanized on a digital computer. A numerical example is included to show the advantage of smoothing in reducing the errors in estimation. In the Appendix the results for discrete systems are formally extended to continuous systems.}},
+    author = {Rauch, H. E. and Striebel, C. T. and Tung, F.},
+    citeulike-article-id = {2206895},
+    journal = {Journal of the American Institute of Aeronautics and Astronautics},
+    month = aug,
+    number = {8},
+    pages = {1445--1450},
+    posted-at = {2010-12-01 14:05:07},
+    priority = {2},
+    title = {{Maximum Likelihood Estimates of Linear Dynamic Systems}},
+    volume = {3},
+    year = {1965}
+}
+
+@misc{Cappe:IntroToSMC:Online,
+author = {Cappé, Olivier},
+title = {An Introduction to Sequential Monte Carlo for Filtering and Smoothing},
+year = {2008},
+url = {http://www-irma.u-strasbg.fr/~guillou/meeting/cappe.pdf}
+}
+
+@ARTICLE{RSPSA1927:115,
+   author = {{Kermack}, W.~O. and {McKendrick}, A.~G.},
+    title = "{A Contribution to the Mathematical Theory of Epidemics}",
+  journal = {Proceedings of the Royal Society of London Series A},
+     year = 1927,
+    month = aug,
+   volume = 115,
+    pages = {700-721},
+      doi = {10.1098/rspa.1927.0118},
+   adsurl = {http://adsabs.harvard.edu/abs/1927RSPSA.115..700K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{bmj-influenza,
+title = "{Influenza in a boarding school}",
+journal = {British Medical Journal},
+year = 1978,
+month = mar,
+pages = {587}
+}
