Some notes for Lotka-Volterra.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -114,3 +114,28 @@ year = 1978,
 month = mar,
 pages = {587}
 }
+
+@article{doi:10.1021/j150111a004,
+author = {Alfred J. Lotka},
+title = {Contribution to the Theory of Periodic Reactions},
+journal = {The Journal of Physical Chemistry},
+volume = {14},
+number = {3},
+pages = {271-274},
+year = {1909},
+doi = {10.1021/j150111a004},
+URL = {http://dx.doi.org/10.1021/j150111a004},
+eprint = {http://dx.doi.org/10.1021/j150111a004}
+}
+
+@article{Volterra1926,
+abstract = {Lotka–Volterra equations for predator-prey equations; first-order, non-linear, differential equations frequently used to describe the dynamics of biological systems in which two species interact, one as a predator and the other as prey.},
+author = {Volterra, Vito},
+journal = {Memorie della R. Accademia dei Lincei},
+number = {2},
+pages = {31--113},
+title = {{Variazioni e fluttuazioni del numero d'individui in specie animali conviventi}},
+url = {http://www.liberliber.it/biblioteca/v/volterra/variazioni{\_}e{\_}fluttuazioni/pdf/volterra{\_}variazioni{\_}e{\_}fluttuazioni.pdf},
+volume = {6},
+year = {1926}
+}
