Experience with LibBi blog.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -139,3 +139,11 @@ url = {http://www.liberliber.it/biblioteca/v/volterra/variazioni{\_}e{\_}fluttua
 volume = {6},
 year = {1926}
 }
+
+@article{Moral2015,
+abstract = {We propose sequential Monte Carlo (SMC) methods for sampling the posterior distribution of state-space models under highly informative observation regimes, a situation in which standard SMC methods can perform poorly. A special case is simulating bridges between given initial and final values. The basic idea is to introduce a schedule of intermediate weighting and resampling times between observation times, which guide particles towards the final state. This can always be done for continuous-time models, and may be done for discrete-time models under sparse observation regimes; our main focus is on continuous-time diffusion processes. The methods are broadly applicable in that they support multivariate models with partial observation, do not require simulation of the backward transition (which is often unavailable), and, where possible, avoid pointwise evaluation of the forward transition. When simulating bridges, the last cannot be avoided entirely without concessions, and we suggest an approach (reminiscent of Approximate Bayesian Computation) as a workaround. Compared to the bootstrap particle filter, the new methods deliver substantially reduced mean squared error in normalising constant estimates, even after accounting for execution time. The methods are demonstrated for state estimation with two toy examples, and for parameter estimation (within a particle marginal Metropolis–Hastings sampler) with three applied examples in econometrics, epidemiology and marine biogeochemistry.},
+author = {Moral, Pierre Del and Murray, Lawrence M},
+file = {:Users/dom/Library/Application Support/Mendeley Desktop/Downloaded/Moral, Murray - 2015 - Sequential Monte Carlo with Highly Informative Observations.pdf:pdf},
+title = {{Sequential Monte Carlo with Highly Informative Observations}},
+year = {2015}
+}
