Add more explanation, refs and ...
... make notation consistent.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -147,3 +147,54 @@ file = {:Users/dom/Library/Application Support/Mendeley Desktop/Downloaded/Moral
 title = {{Sequential Monte Carlo with Highly Informative Observations}},
 year = {2015}
 }
+
+@book{williams1991probability,
+author = {Williams, D},
+isbn = {9780521406055},
+publisher = {Cambridge University Press},
+series = {Cambridge mathematical textbooks},
+title = {{Probability with martingales}},
+url = {http://books.google.co.uk/books?id=RnOJeRpk0SEC},
+year = {1991}
+}
+
+@article{Dureau2013,
+abstract = {Epidemics are often modeled using non-linear dynamical systems observed through partial and noisy data. In this paper, we consider stochastic extensions in order to capture unknown influences (changing behaviors, public interventions, seasonal effects, etc.). These models assign diffusion processes to the time-varying parameters, and our inferential procedure is based on a suitably adjusted adaptive particle Markov chain Monte Carlo algorithm. The performance of the proposed computational methods is validated on simulated data and the adopted model is applied to the 2009 H1N1 pandemic in England. In addition to estimating the effective contact rate trajectories, the methodology is applied in real time to provide evidence in related public health decisions. Diffusion-driven susceptible exposed infected retired-type models with age structure are also introduced.},
+author = {Dureau, Joseph and Kalogeropoulos, Konstantinos and Baguelin, Marc},
+doi = {10.1093/biostatistics/kxs052},
+file = {:Users/dom/Library/Application Support/Mendeley Desktop/Downloaded/Dureau, Kalogeropoulos, Baguelin - 2013 - Capturing the time-varying drivers of an epidemic using stochastic dynamical systems.pdf:pdf},
+issn = {1468-4357},
+journal = {Biostatistics (Oxford, England)},
+keywords = {Adult,Algorithms,Bayes Theorem,Biostatistics,Child,England,England: epidemiology,Epidemics,Epidemics: statistics {\&} numerical data,Humans,Influenza A Virus, H1N1 Subtype,Influenza, Human,Influenza, Human: epidemiology,Markov Chains,Models, Biological,Models, Statistical,Monte Carlo Method,Nonlinear Dynamics,Pandemics,Pandemics: statistics {\&} numerical data,Stochastic Processes,Time Factors},
+month = {jul},
+number = {3},
+pages = {541--55},
+pmid = {23292757},
+title = {{Capturing the time-varying drivers of an epidemic using stochastic dynamical systems.}},
+url = {http://biostatistics.oxfordjournals.org/content/early/2013/01/04/biostatistics.kxs052.abstract},
+volume = {14},
+year = {2013}
+}
+
+@article{Andrieu2010,
+abstract = {Summary. Markov chain Monte Carlo and sequential Monte Carlo methods have emerged as the two main tools to sample from high dimensional probability distributions. Although asymptotic convergence of Markov chain Monte Carlo algorithms is ensured under weak assumptions, the performance of these algorithms is unreliable when the proposal distributions that are used to explore the space are poorly chosen and/or if highly correlated variables are updated independently. We show here how it is possible to build efficient high dimensional proposal distributions by using sequential Monte Carlo methods. This allows us not only to improve over standard Markov chain Monte Carlo schemes but also to make Bayesian inference feasible for a large class of statistical models where this was not previously so. We demonstrate these algorithms on a non-linear state space model and a L{\'{e}}vy-driven stochastic volatility model.},
+author = {Andrieu, Christophe and Doucet, Arnaud and Holenstein, Roman},
+doi = {10.1111/j.1467-9868.2009.00736.x},
+file = {:Users/dom/Dropbox/Private/Bayesian/andrieu{\_}doucet{\_}holenstein{\_}PMCMC.pdf:pdf},
+isbn = {1467-9868},
+issn = {13697412},
+journal = {Journal of the Royal Statistical Society. Series B: Statistical Methodology},
+keywords = {Bayesian inference,Markov chain Monte Carlo methods,Sequential Monte Carlo methods,State space models},
+number = {3},
+pages = {269--342},
+title = {{Particle Markov chain Monte Carlo methods}},
+volume = {72},
+year = {2010}
+}
+
+@article{Murray,
+abstract = {LibBi is a software package for state-space modelling and Bayesian inference on modern computer hardware, including multi-core central processing units (CPUs), many-core graphics processing units (GPUs) and distributed-memory clusters of such devices. The software parses a domain-specific language for model specification, then optimises, generates, compiles and runs code for the given model, inference method and hardware platform. In presenting the software, this work serves as an introduction to state-space models and the specialised methods developed for Bayesian inference with them. The focus is on sequential Monte Carlo (SMC) methods such as the particle filter for state estimation, and the particle Markov chain Monte Carlo (PMCMC) and SMC 2 methods for parameter estimation. All are well-suited to current computer hardware. Two examples are given and developed throughout, one a linear three-element windkessel model of the human arterial system, the other a nonlinear Lorenz '96 model. These are specified in the prescribed modelling language, and LibBi demonstrated by performing inference with them. Empirical results are presented, including a performance comparison of the software with different hardware configurations.},
+author = {Murray, Lawrence M},
+file = {:Users/dom/Library/Application Support/Mendeley Desktop/Downloaded/Murray - Unknown - Bayesian State-Space Modelling on High-Performance Hardware Using LibBi.pdf:pdf},
+title = {{Bayesian State-Space Modelling on High-Performance Hardware Using LibBi}}
+}
