Changes lost in the merge.

--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -193,8 +193,117 @@ year = {2010}
 }
 
 @article{Murray,
-abstract = {LibBi is a software package for state-space modelling and Bayesian inference on modern computer hardware, including multi-core central processing units (CPUs), many-core graphics processing units (GPUs) and distributed-memory clusters of such devices. The software parses a domain-specific language for model specification, then optimises, generates, compiles and runs code for the given model, inference method and hardware platform. In presenting the software, this work serves as an introduction to state-space models and the specialised methods developed for Bayesian inference with them. The focus is on sequential Monte Carlo (SMC) methods such as the particle filter for state estimation, and the particle Markov chain Monte Carlo (PMCMC) and SMC 2 methods for parameter estimation. All are well-suited to current computer hardware. Two examples are given and developed throughout, one a linear three-element windkessel model of the human arterial system, the other a nonlinear Lorenz '96 model. These are specified in the prescribed modelling language, and LibBi demonstrated by performing inference with them. Empirical results are presented, including a performance comparison of the software with different hardware configurations.},
+abstract = {LibBi is a software package for state-space modelling and
+                  Bayesian inference on modern computer hardware,
+                  including multi-core central processing units
+                  (CPUs), many-core graphics processing units (GPUs)
+                  and distributed-memory clusters of such devices. The
+                  software parses a domain-specific language for model
+                  specification, then optimises, generates, compiles
+                  and runs code for the given model, inference method
+                  and hardware platform. In presenting the software,
+                  this work serves as an introduction to state-space
+                  models and the specialised methods developed for
+                  Bayesian inference with them. The focus is on
+                  sequential Monte Carlo (SMC) methods such as the
+                  particle filter for state estimation, and the
+                  particle Markov chain Monte Carlo (PMCMC) and SMC 2
+                  methods for parameter estimation. All are
+                  well-suited to current computer hardware. Two
+                  examples are given and developed throughout, one a
+                  linear three-element windkessel model of the human
+                  arterial system, the other a nonlinear Lorenz '96
+                  model. These are specified in the prescribed
+                  modelling language, and LibBi demonstrated by
+                  performing inference with them. Empirical results
+                  are presented, including a performance comparison of
+                  the software with different hardware
+                  configurations.},
 author = {Murray, Lawrence M},
-file = {:Users/dom/Library/Application Support/Mendeley Desktop/Downloaded/Murray - Unknown - Bayesian State-Space Modelling on High-Performance Hardware Using LibBi.pdf:pdf},
-title = {{Bayesian State-Space Modelling on High-Performance Hardware Using LibBi}}
+file = {:Users/dom/Library/Application Support/Mendeley
+                  Desktop/Downloaded/Murray - Unknown - Bayesian
+                  State-Space Modelling on High-Performance Hardware
+                  Using LibBi.pdf:pdf},
+title = {{Bayesian State-Space Modelling on High-Performance Hardware
+                  Using LibBi}}
+}
+
+ @book{Robinson2003,
+abstract = {This book treats the theory of global attractors, a recent
+                  development in the theory of partial differential
+                  equations, in a way that also includes much of the
+                  traditional elements of the subject. As such it
+                  gives a quick but directed introduction to some
+                  fundamental concepts, and by the end proceeds to
+                  current research problems. Since the subject is
+                  relatively new, this is the first book to attempt to
+                  treat these various topics in a unified and didactic
+                  way. It is intended to be suitable for first year
+                  graduate students.},
+author = {Robinson, Jc and Pierre, C},
+booktitle = {Applied Mechanics Reviews},
+doi = {10.1115/1.1579456},
+isbn = {0521635640},
+issn = {00036900},
+number = {4},
+pages = {B54},
+title = {{Infinite-Dimensional Dynamical Systems: An Introduction to
+                  Dissipative Parabolic PDEs and the Theory of Global
+                  Attractors. Cambridge Texts in Applied Mathematics}},
+url = {http://link.aip.org/link/AMREAD/v56/i4/pB54/s1{\&}Agg=doi},
+volume = {56},
+year = {2003}
+}
+
+@book{Temam1997,
+abstract = {In this book the author presents the dynamical systems in
+                  infinite dimension, especially those generated by
+                  dissipative partial differential equations. This
+                  book attempts a systematic study of infinite
+                  dimensional dynamical systems generated by
+                  dissipative evolution partial differential equations
+                  arising in mechanics and physics and in other areas
+                  of sciences and technology. This second edition has
+                  been updated and extended.},
+author = {Temam, Roger},
+booktitle = {Appllied Mathematical Sciences},
+doi = {10.1007/978-1-4684-0313-8},
+isbn = {978-0-387-94866-9},
+issn = {9780387948669},
+title = {{Infinite-dimensional dynamical systems in mechanics and
+                  physics}},
+volume = {68},
+year = {1997}
+}
+
+@book{Chueshov1999,
+abstract = {U n i v e r s i t y l e c t u r e s i n c o n t e m p o r
+                  a r y m a t h e m a t i c s Dissipative issipative
+                  Systems ystems of Infinite-Dimensional
+                  Infinite-Dimensional Introduction ntroduction Theory
+                  Theory to the This book provides an exhau -stive
+                  introduction to the scope of main ideas and methods
+                  of the theory of infinite-dimensional dis -sipative
+                  dynamical systems which has been rapidly developing
+                  in re -cent years. In the examples sys tems
+                  generated by nonlinear partial differential
+                  equations arising in the different problems of
+                  modern mechanics of continua are considered. The
+                  main goal of the book is to help the reader to
+                  master the basic strategies used in the study of
+                  infinite-dimensional dissipative systems and to
+                  qualify him/her for an independent scien -tific
+                  research in the given branch. Experts in nonlinear
+                  dynamics will find many fundamental facts in the
+                  convenient and practical form in this book.},
+author = {Chueshov, Constantin I and {Khorolska Author}, Maryna B and
+                  {Chueshov I D Chueshov}, I D},
+booktitle = {from the Russian edition («ACTA»},
+file = {:Users/dom/Library/Application Support/Mendeley
+                  Desktop/Downloaded/Chueshov, Khorolska Author,
+                  Chueshov I D Chueshov - 1999 - Introduction to the
+                  Theory of Infinite-Dimensional Dissipative
+                  Systems.pdf:pdf},
+title = {{Introduction to the Theory of Infinite-Dimensional Dissipative Systems}},
+year = {1999}
 }
