--- a/Stochastic.bib
+++ b/Stochastic.bib
@@ -296,8 +296,7 @@ abstract = {U n i v e r s i t y l e c t u r e s i n c o n t e m p o r
                   research in the given branch. Experts in nonlinear
                   dynamics will find many fundamental facts in the
                   convenient and practical form in this book.},
-author = {Chueshov, Constantin I and {Khorolska Author}, Maryna B and
-                  {Chueshov I D Chueshov}, I D},
+author = {Chueshov, Constantin I and Khorolska, Maryna B},
 booktitle = {from the Russian edition («ACTA»},
 file = {:Users/dom/Library/Application Support/Mendeley
                   Desktop/Downloaded/Chueshov, Khorolska Author,
@@ -306,4 +305,35 @@ file = {:Users/dom/Library/Application Support/Mendeley
                   Systems.pdf:pdf},
 title = {{Introduction to the Theory of Infinite-Dimensional Dissipative Systems}},
 year = {1999}
+}
+
+@Misc{stan1,
+  title = {Stan: A C++ Library for Probability and Sampling, Version
+    2.10.0},
+  author = {{Stan Development Team}},
+  year = {2015},
+  url = {http://mc-stan.org/},
+  }
+
+@Manual{stan2,
+  title = {Stan Modeling Language User's Guide and Reference Manual,
+    Version 2.10.0},
+  author = {{Stan Development Team}},
+  year = {2015},
+  url = {http://mc-stan.org/},
+  }
+
+@Article{stan3,
+  title = {The No-U-Turn Sampler: Adaptively Setting Path Lengths in
+    Hamiltonian Monte Carlo},
+  author = {Matthew D. Hoffman and Andrew Gelman},
+  year = {2014},
+  journal = {Journal of Machine Learning Research},
+  }
+
+@Article{stan4,
+  title = {Stan: A Probabilistic Programming Language},
+  author = {Bob Carpenter},
+  year = {2015},
+  journal = {Journal of Statistical Software},
 }
